{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 1044,
  "lineage": "02673287-27b0-8e53-8c2e-552d245227e7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072351085675:vpc/vpc-0cca4587cb26d6420",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-039ec646b579c42ba",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-080296d5ce043a40f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cca4587cb26d6420",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-032cfa403f848a2d3",
            "owner_id": "072351085675",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "poker_server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02692688a4763d83d",
            "arn": "arn:aws:ec2:us-east-1:072351085675:elastic-ip/eipalloc-02692688a4763d83d",
            "association_id": "eipassoc-0c9208b6eec15d5b1",
            "domain": "vpc",
            "id": "eipalloc-02692688a4763d83d",
            "instance": "i-05515238ab3131bf3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09481733a71194908",
            "private_dns": "ip-172-31-33-4.ec2.internal",
            "private_ip": "172.31.33.4",
            "public_dns": "ec2-3-228-203-155.compute-1.amazonaws.com",
            "public_ip": "3.228.203.155",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "PokerServerEIP"
            },
            "tags_all": {
              "Name": "PokerServerEIP"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072351085675",
            "id": "eipalloc-02692688a4763d83d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_dynamodb_table.games_table",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_logs_role",
            "aws_instance.poker_server",
            "aws_security_group.alb_sg",
            "aws_security_group.poker_sg",
            "aws_ssm_parameter.cw_agent_config",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "poker_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0341d95f75f311023",
            "arn": "arn:aws:ec2:us-east-1:072351085675:instance/i-05515238ab3131bf3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poker-game-ec2-profile",
            "id": "i-05515238ab3131bf3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09481733a71194908"
              }
            ],
            "primary_network_interface_id": "eni-09481733a71194908",
            "private_dns": "ip-172-31-33-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.4",
            "public_dns": "ec2-98-83-6-75.compute-1.amazonaws.com",
            "public_ip": "98.83.6.75",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a84f82564aeafcb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "poker-game-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029adf83780c0c188",
            "tags": {
              "Name": "PokerGameServer"
            },
            "tags_all": {
              "Name": "PokerGameServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-00744698e0bf0353c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072351085675",
            "id": "i-05515238ab3131bf3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_dynamodb_table.games_table",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_logs_role",
            "aws_security_group.alb_sg",
            "aws_security_group.poker_sg",
            "aws_ssm_parameter.cw_agent_config",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "poker_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:loadbalancer/app/poker-game-alb/5abec24d9ad32a8b",
            "arn_suffix": "app/poker-game-alb/5abec24d9ad32a8b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "poker-game-alb-1917828768.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:072351085675:loadbalancer/app/poker-game-alb/5abec24d9ad32a8b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "poker-game-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-09b0d29f46fab23ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a99e58e80dcd297"
              },
              {
                "subnet_id": "subnet-029adf83780c0c188"
              },
              {
                "subnet_id": "subnet-05ab6777fe891e660"
              },
              {
                "subnet_id": "subnet-064f257f5ebc1222a"
              },
              {
                "subnet_id": "subnet-08f23715afe198ffa"
              },
              {
                "subnet_id": "subnet-0b72afa47198e13ed"
              }
            ],
            "subnets": [
              "subnet-00a99e58e80dcd297",
              "subnet-029adf83780c0c188",
              "subnet-05ab6777fe891e660",
              "subnet-064f257f5ebc1222a",
              "subnet-08f23715afe198ffa",
              "subnet-0b72afa47198e13ed"
            ],
            "tags": {
              "Name": "PokerGameALB"
            },
            "tags_all": {
              "Name": "PokerGameALB"
            },
            "vpc_id": "vpc-0cca4587cb26d6420",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:loadbalancer/app/poker-game-alb/5abec24d9ad32a8b"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.default_public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:listener/app/poker-game-alb/5abec24d9ad32a8b/985b39b9696ca5c2",
            "certificate_arn": "arn:aws:acm:us-east-1:072351085675:certificate/f82aae2e-2588-4899-b0dd-9e1ff1d38e07",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:targetgroup/poker-ec2-target-8000/b6779b3997497515",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:072351085675:listener/app/poker-game-alb/5abec24d9ad32a8b/985b39b9696ca5c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:loadbalancer/app/poker-game-alb/5abec24d9ad32a8b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:listener/app/poker-game-alb/5abec24d9ad32a8b/985b39b9696ca5c2"
          },
          "dependencies": [
            "aws_lb.poker_alb",
            "aws_lb_target_group.poker_ec2_8000",
            "aws_security_group.alb_sg",
            "data.aws_acm_certificate.poker_cert",
            "data.aws_subnets.default_public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "poker_ec2_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:targetgroup/poker-ec2-target-8000/b6779b3997497515",
            "arn_suffix": "targetgroup/poker-ec2-target-8000/b6779b3997497515",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:072351085675:targetgroup/poker-ec2-target-8000/b6779b3997497515",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:072351085675:loadbalancer/app/poker-game-alb/5abec24d9ad32a8b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "poker-ec2-target-8000",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cca4587cb26d6420"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:targetgroup/poker-ec2-target-8000/b6779b3997497515"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "poker_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:072351085675:targetgroup/poker-ec2-target-8000/b6779b3997497515,i-05515238ab3131bf3,8000",
            "port": 8000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:targetgroup/poker-ec2-target-8000/b6779b3997497515",
            "target_id": "i-05515238ab3131bf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072351085675",
            "port": 8000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:072351085675:targetgroup/poker-ec2-target-8000/b6779b3997497515",
            "target_id": "i-05515238ab3131bf3"
          },
          "dependencies": [
            "aws_dynamodb_table.games_table",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_logs_role",
            "aws_instance.poker_server",
            "aws_lb_target_group.poker_ec2_8000",
            "aws_security_group.alb_sg",
            "aws_security_group.poker_sg",
            "aws_ssm_parameter.cw_agent_config",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072351085675:security-group/sg-09b0d29f46fab23ba",
            "description": "Public edge entry point for secure HTTPS/WSS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b0d29f46fab23ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "poker-alb-sg",
            "name_prefix": "",
            "owner_id": "072351085675",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cca4587cb26d6420"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072351085675",
            "id": "sg-09b0d29f46fab23ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "poker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072351085675:security-group/sg-00744698e0bf0353c",
            "description": "Nginx front door",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00744698e0bf0353c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b0d29f46fab23ba"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "poker-game-sg",
            "name_prefix": "",
            "owner_id": "072351085675",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cca4587cb26d6420"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072351085675",
            "id": "sg-00744698e0bf0353c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}